# axum-template

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  compose.yml
docker/local/postgresql/: Dockerfile
docker/local/redis/: Dockerfile
docker/local/rust/: Dockerfile
domains/: Cargo.toml
domains/src/repositories/: user_repository.rs
infrastructures/: Cargo.toml
infrastructures/src/: lib.rs
infrastructures/src/persistences/: user.rs
interfaces/: Cargo.toml
interfaces/src/: lib.rs  openapi.rs
interfaces/src/rest/: mod.rs
interfaces/src/rest/controllers/v1/: health_check_controller.rs  mod.rs
interfaces/src/rest/controllers/v1/auth/: user_controller.rs
interfaces/src/rest/responses/: global_ok_response.rs  mod.rs
interfaces/src/rest/routes/: mod.rs
interfaces/src/rest/routes/v1/: health_check.rs  mod.rs
interfaces/src/rest/routes/v1/auth/: mod.rs  user.rs
interfaces/src/rest/usecases/: user_usecase.rs
registry/: Cargo.toml
registry/src/: lib.rs
shares/: Cargo.toml
shares/env/: .env.example  .env.testing
shares/src/config/: app.rs  mod.rs
shares/src/error/: error_404.rs  mod.rs
shares/tests/config/: app.rs
src/: main.rs
usecases/: Cargo.toml
usecases/src/: user_usecase.rs
