[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["interfaces", "shares"]

[workspace.dependencies]
interfaces ={ path = "./interfaces" }
shares ={ path = "./shares" }
anyhow = "1.0.91"
axum = { version = "0.7.7", features = ["macros"] }
dotenvy = "0.15.7"
rstest = "0.23.0"
serde = { version = "1.0.213", features = ["derive"]}
tokio = { version = "1.41.0", features = ["full"] }

[dependencies]
interfaces.workspace = true
shares.workspace = true
anyhow.workspace = true
axum.workspace = true
dotenvy.workspace = true
tokio.workspace = true
