[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["interfaces", "shares", "usecases"]

[workspace.dependencies]
interfaces = { path = "./interfaces" }
shares = { path = "./shares" }
usecases = { path = "./usecases" }
anyhow = "1.0.91"
axum = { version = "0.7.7", features = ["macros"] }
dotenvy = "0.15.7"
rstest = "0.23.0"
serde = { version = "1.0.213", features = ["derive"] }
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
utoipa = { version = "5.1.2", features = ["axum_extras", "chrono", "ulid", "uuid"] }
utoipa-redoc = { version = "5.0.0", features = ["axum"] }

[dependencies]
interfaces.workspace = true
shares.workspace = true
anyhow.workspace = true
axum.workspace = true
dotenvy.workspace = true
tokio.workspace = true
utoipa.workspace = true
utoipa-redoc.workspace = true
thiserror.workspace = true
