[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = [ "domains", "infrastructures", "interfaces", "registry", "shares", "usecases" ]

[workspace.dependencies]
domains = { path = "./domains" }
infrastructures = { path = "./infrastructures" }
interfaces = { path = "./interfaces" }
registry = { path = "./registry" }
shares = { path = "./shares" }
usecases = { path = "./usecases" }
anyhow = "1.0.91"
axum = { version = "0.7.7", features = ["macros"] }
dotenvy = "0.15.7"
rstest = "0.23.0"
serde = { version = "1.0.213", features = ["derive"] }
shaku = "0.6.2"
shaku_axum = "0.5.0"
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
utoipa = { version = "5.1.2", features = ["axum_extras", "chrono", "ulid", "uuid"] }
utoipa-redoc = { version = "5.0.0", features = ["axum"] }

[dependencies]
anyhow.workspace = true
axum.workspace = true
interfaces.workspace = true
registry.workspace = true
shares.workspace = true
tokio.workspace = true
utoipa.workspace = true
utoipa-redoc.workspace = true
